--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.63.5"
+    "react-toastify": "^9.1.3",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
